# app/Http/Controllers/TweetsController.php
@@ -286,18 +286,11 @@ class TweetsController extends Controller
 
     /**
     *   @OA\Get(
-    *   path="/tweets/{id}",
-    *   description="Show followed users tweets",
+    *       path="/tweets/users-followed-tweets",
+    *       description="Show followed users tweets",
     *       summary="List Followed Users Tweets",
-    *   operationId="showFollowedUsersTweets",
-    *   tags={"Tweets"},
-    *       @OA\Parameter(
-    *           in="path",
-    *           name="id",
-    *           required=true,
-    *           @OA\Schema(type="number"),
-    *           @OA\Examples(example="id", value="1", summary="An ID value."),
-    *       ),
+    *       operationId="showFollowedUsersTweets",
+    *       tags={"Tweets"},
     *       @OA\Response(
     *           response=200,
     *           description="Success",
